@@ -1,3 +1,8 @@
+2002-03-19  Hans-Peter Nilsson  <hp@axis.com>
+
+	* pmacros.scm (-pmacro-expand,scan): If result is a symbol,
+	call scan-symbol on it, to enable recursive macro-expansion.
+
 2002-01-25  Frank Ch. Eigler  <fche@redhat.com>
 
 	* sid-cpu.scm (-gen-hardware-types): Generate single hardware union
